k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-app
  namespace: tech-challenge
  labels:
    app: tech-challenge-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: tech-challenge-app
